# monkeychat

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: connection.rs  main.rs  message.rs
monkeychat-client/: Cargo.toml
monkeychat-server/: Cargo.toml
server/: Cargo.toml
server/src/: main.rs
